--- a/infra/k8s/event-bus-depl.yaml
+++ b/infra/k8s/event-bus-depl.yaml
@@ -1,30 +1,30 @@
 apiVersion: apps/v1       #specify the "bucket" of objects that contain Deployment object
 kind: Deployment
 metadata:
-  name: posts-depl        #name of deployment
+  name: event-bus-depl    #name of deployment
 spec:                     #specify how this deployment object should behave
   replicas: 1             #number of pod to create for some particular image
   selector:
     matchLabels:
-      app: posts          #find all the pods with the label "app: posts", the label name is not important, you can even use "abc: xyz" 
+      app: event-bus      #find all the pods with the label "app: event-bus", the label name is not important, you can even use "abc: xyz" 
   template:               #the template is where you specify the exact configuration of a pod for deployment obj to create
     metadata:
       labels:
-        app: posts
+        app: event-bus
     spec:
       containers:
-        - name: posts
-          image: dmnhat91/posts
+        - name: event-bus
+          image: dmnhat91/event-bus
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: posts-clusterip-srv
+  name: event-bus-srv
 spec:
   selector:
-    app: posts
+    app: event-bus
   ports:
-    - name: posts
+    - name: event-bus
       protocol: TCP
-      port: 4000
-      targetPort: 4000
+      port: 4005
+      targetPort: 4005
