Add client deployment to k8s

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,6 +1,8 @@
 # specify base image
 FROM node:alpine
 
+ENV CI=true
+
 # set working directory to '/app' in the container. All following commands will be issued relative to this dir
 WORKDIR /app
 
