--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -4,15 +4,37 @@ metadata:
   name: ingress-srv
   annotations:
     kubernetes.io/ingress.class: nginx  # help the ingress controller understand we are trying to feed it with some routing rules
+    nginx.ingress.kubernetes.io/use-regex: 'true'  # to allow to use regular expression in path config like /posts/?(.*)/comments
 spec:
   rules:
     - host: posts.com
       http:
         paths:
-          - path: /posts
+          - path: /posts/create
             pathType: Prefix
             backend:
               service:
                 name: posts-clusterip-srv
                 port:
                   number: 4000
+          - path: /posts
+            pathType: Prefix
+            backend:
+              service:
+                name: query-srv
+                port:
+                  number: 4002
+          - path: /posts/?(.*)/comments
+            pathType: Prefix
+            backend:
+              service:
+                name: comments-srv
+                port:
+                  number: 4001
+          - path: /?(.*)                      # because this is most general hence need to be put at the bottom
+            pathType: Prefix
+            backend:
+              service:
+                name: client-srv
+                port:
+                  number: 3000
